--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
-title: BLOG
-description: "The personal blog of Hossain Mohd. Faysal, a doctoral candidate in Electrical Engineering at University of Pennsylvania."
-headline: An Engineer's Diary
-tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsylvania, doha, Qatar]
+title: Zombie Process Games
+description: "The development website of Zombie Process Games."
+headline: Game Development
+tags: [Zombie Process, zombieprocess, Games, VR, Engineering, Oculus]
 ---
 {% if site.paginate %}
 	{% for post in paginator.posts %}
