--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,15 @@
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123142315-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123142315-1');
+</script>
+
 <link rel="stylesheet" type="text/css" href="portfolio.css"/>
 <title>Owen Pedrotti's Portfolio</title>
 </head>
