updated portfolio and resume

--- a/portfolio/header.html
+++ b/portfolio/header.html
@@ -10,21 +10,21 @@
 onmouseover="style.background='#777'" onmouseout="style.background='#555'">
 Introduction</a></li>
 
+<li><A href="marvel.html" target="_parent" 
+onmouseover="style.background='#777'" onmouseout="style.background='#555'">
+Marvel VR</a></li>
+
+<li><A href="ripcoil.html" target="_parent" 
+onmouseover="style.background='#777'" onmouseout="style.background='#555'">
+Ripcoil</a></li>
+
 <li><A href="sixensevr.html" target="_parent" 
 onmouseover="style.background='#777'" onmouseout="style.background='#555'">
 SixenseVR</A></li>
 
-<li><A href="apocwars.html" target="_parent" 
-onmouseover="style.background='#777'" onmouseout="style.background='#555'">
-Apoc Wars</a></li>
-
 <li><A href="themummyonline.html" target="_parent" 
 onmouseover="style.background='#777'" onmouseout="style.background='#555'">
 Mummy Online</a></li>
-
-<li><A href="tengen.html" target="_parent" 
-onmouseover="style.background='#777'" onmouseout="style.background='#555'">
-Tengen Go</a></li>
 
 </ul>
 </body>
