--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,7 +18,7 @@
 <iframe src="header.html" width="800" height="150"></iframe>
 
 <div id="contents">
-<h4><A href="Owen%20Pedrotti%20Resume.doc">My Resume</a></h4>
+<h4><A href="OwenPedrottiResume.doc">My Resume</a></h4>
 <p>
 Hello,
 <br>    My name is Owen Pedrotti, and I would like to show
