--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@ Thank you very much for your time,<br>
 Owen Pedrotti
 </p>
 <p>
-<a href="http://sanzaru.com/">Sanzaru Games</a> 2016-present<br>
+<a href="http://sanzaru.com/">Sanzaru Games</a> 2016-2019<br>
 <a href="http://sixense.com/">Sixense Entertainment</a> 2013-2016<br>
 <a href="http://gloops.com/en/">gloops International</a> 2012-2013<br>
 <a href="http://bigpoint.net/">Bigpoint Inc.</a> 2010-2012<br>
